--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders.usesCleartextTraffic = false
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders.usesCleartextTraffic = true
         }
     }
     compileOptions {
@@ -50,6 +56,8 @@ android {
 }
 
 dependencies {
+    def okhttp_version = "4.11.0"
+    def play_services_base_version = "18.1.0"
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
@@ -68,6 +76,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation platform('com.google.firebase:firebase-bom:32.2.3')
+    implementation("com.google.firebase:firebase-messaging-ktx")
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.google.android.gms:play-services-base:$play_services_base_version"
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -75,8 +92,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation "androidx.room:room-runtime:2.5.2"
-    kapt "androidx.room:room-compiler:2.5.2"
-    implementation platform('com.google.firebase:firebase-bom:32.2.3')
-    implementation("com.google.firebase:firebase-messaging-ktx")
+
 }
