--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 dependencies {
     def okhttp_version = "4.11.0"
     def play_services_base_version = "18.1.0"
+    def room_version = "2.6.0-alpha02"
+
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
@@ -90,6 +92,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "androidx.room:room-ktx:$room_version"
 
 
     testImplementation 'junit:junit:4.13.2'
