--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     def okhttp_version = "4.11.0"
     def play_services_base_version = "18.1.0"
     def room_version = "2.6.0-alpha02"
+    def lifecycle_version = "2.2.0"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -94,6 +95,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
 
     testImplementation 'junit:junit:4.13.2'
