--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     def play_services_base_version = "18.1.0"
     def room_version = "2.6.0-alpha02"
     def lifecycle_version = "2.2.0"
+    def imagepicker_version = "2.1"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -96,6 +97,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
 
 
     testImplementation 'junit:junit:4.13.2'
