--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+
+        maven { url "https://jitpack.io" } //подключаем этот репозиторий для imagepicker
     }
 }
 rootProject.name = "First_App"
