--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.First_App"
+        android:name=".application.NMediaApplication"
         android:usesCleartextTraffic="${usesCleartextTraffic}"
         tools:targetApi="31"
         >
