--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     def room_version = "2.6.0-alpha02"
     def lifecycle_version = "2.2.0"
     def imagepicker_version = "2.1"
+    def coroutines_version = "1.7.3"
+    def workmanager_version = "2.8.1"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -94,10 +96,12 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
+    implementation "androidx.work:work-runtime-ktx:$workmanager_version" //фоновый сервис workmanager
 
 
     testImplementation 'junit:junit:4.13.2'
