--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -66,6 +68,7 @@ dependencies {
     def imagepicker_version = "2.1"
     def coroutines_version = "1.7.3"
     def workmanager_version = "2.8.1"
+    def hilt_version = "2.44"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -102,6 +105,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
     implementation "androidx.work:work-runtime-ktx:$workmanager_version" //фоновый сервис workmanager
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
 
     testImplementation 'junit:junit:4.13.2'
