--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     def coroutines_version = "1.7.3"
     def workmanager_version = "2.8.1"
     def hilt_version = "2.44"
+    def paging_version = "3.2.0"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -107,7 +108,8 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$workmanager_version" //фоновый сервис workmanager
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.room:room-paging:2.6.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
