--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.9.20"
+    ext.kotlin_version = "1.8.20"
     ext.hilt_version = "2.44"
 
     repositories {
@@ -8,12 +8,12 @@ buildscript {
         google()
     }
 
-//    dependencies {
-//        classpath "com.android.tools.build:gradle:8.2.0"
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin: $kotlin_version"
-//        classpath "com.google.gms:google-services:4.4.0"
-//        classpath "com.google.dagger: hilt-android-gradle-plugin: $hilt_version"
-//    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:4.4.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    }
 }
 
 plugins {
